Fixed header spacing on titles with 3 lines, and footer spacing in some areas

--- a/app/scss/brands/maytag/_footer-mt.scss
+++ b/app/scss/brands/maytag/_footer-mt.scss
@@ -19,6 +19,7 @@ footer.maytag-desktop {display: block;}
 #footer li{line-height:1.8em; margin-bottom: 4px;}
 #footer li.divider{border-bottom:1px solid #CECECE;padding:0 0 10px;margin:0 0 10px}
 #footer li.header a{font-weight:bold}
+#footer li.header.no_link {padding: 0 10px;}
 #footer-menu li a{padding:0 10px;display:inline-block;line-height:1.8em}
 #footer-menu ul.first li a{padding-left:0}
 #footer-menu ul.lastst li a{padding-right:0}
